# zephyr-i2c-labs

./: CMakeLists.txt  app.overlay  atsamc21xp-build.sh  build-atsamc21xp.sh  build-esp32c6.sh  build-nucleo.sh  build-rpi_pico.sh  build-stm32f3disco.sh  build.sh  buildcommand.sh  esp32c6-build.sh  esp32c6-conf.sh  nucleo_f446re-config.sh  prj.conf  rpi_pico-build.sh  stm32f3_disco-build.sh  stm32f3disco-conf.sh
boards/: atsamc21xp.overlay  esp32c6.overlay  esp32c6_devkitc.overlay  nucleo_f446re.conf  nucleo_f446re.overlay  rpi_pico.conf  rpi_pico.overlay  stm32f3_disco.conf  stm32f3_disco.overlay  stm32f3disco.overlay
build-scripts/: nucleo_f446re-build.sh  rpi_pico-conf.sh  samc21n_xpro-conf.sh
dts/bindings/: my,useless-binding.yml
modules/say_hello/: CMakeLists.txt  Kconfig  say_hello.c  say_hello.h
modules/say_hello/zephyr/: module.yaml
src/: main.c
